# TinaToolBox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: ArrowConfig.cmake  BuildCrates.cmake  CrashpadConfig.cmake  ExternalAntlr4Cpp.cmake  Utils.cmake
dependencies/: CMakeLists.txt
dependencies/libcalamine/: CMakeLists.txt  Cargo.toml  build.rs  calamine-static.pc.in  calamine.pc.in  lib.hpp
dependencies/libcalamine/include/: libcalamine.h
dependencies/libcalamine/src/: lib.rs  libcalamine.cpp
dependencies/pdfium-win-x64/: PDFiumConfig.cmake
dependencies/pdfium-win-x64/lib/: pdfium.lib
fail/: DocumentArea.cpp  DocumentArea.hpp  DocumentHandler.hpp  DocumentHandlers.cpp
grammar/: ExcelScript.g4
include/: Block.hpp  BlockItem.hpp  BlockProgrammingDocumentView.hpp  BlockProgrammingView.hpp  CodeEditor.hpp  ConfigManager.hpp  Connector.hpp  CrashHandler.hpp  CrashPaths.hpp  DataFrame.hpp  Document.hpp  DocumentArea.hpp  DocumentHandler.hpp  DocumentManager.hpp  DocumentTabWidget.hpp  DocumentView.hpp  DocumentViewFactory.hpp  EncodingDetector.hpp  ExcelDoucmentView.hpp  ExcelHandler.hpp  ExcelProcessor.hpp  ExcelScriptInterpreter.hpp  ExceptionHandler.hpp  FileHistory.hpp  GraphicsConnector.hpp  LineNumberTextEdit.hpp  LoadingProgressDialog.hpp  LogPanel.hpp  LogSystem.hpp  MainWindow.hpp  MainWindowMenuBar.hpp  MergedTableView.hpp  NonCopyable.hpp  PdfDocumentView.hpp  PdfViewer.hpp  PerformanceTimer.hpp  ProgressIndicator.hpp  ProgressManager.hpp  PythonScriptManager.hpp  Python_wrapper.hpp  (+21 more)
resources/icons/: resource.qrc
resources/themes/: dark.json  light.json
scripts/: test.ttb
src/: Block.cpp  BlockItem.cpp  BlockProgrammingDocumentView.cpp  BlockProgrammingView.cpp  CodeEditor.cpp  ConfigManager.cpp  Connector.cpp  CrashHandler.cpp  CrashPaths.cpp  DataFrame.cpp  Document.cpp  DocumentArea.cpp  DocumentHandlers.cpp  DocumentManager.cpp  DocumentTabWidget.cpp  DocumentView.cpp  DocumentViewFactory.cpp  EncodingDetector.cpp  ExcelDoucmentView.cpp  ExcelHandler.cpp  ExcelProcessor.cpp  ExcelScriptInterpreter.cpp  FileHistory.cpp  GraphicsConnector.cpp  LineNumberTextEdit.cpp  LoadingProgressDialog.cpp  LogPanel.cpp  LogSystem.cpp  MainWindow.cpp  MainWindowMenuBar.cpp  MergedTableView.cpp  PdfDocumentView.cpp  PdfViewer.cpp  PerformanceTimer.cpp  ProgressIndicator.cpp  ProgressManager.cpp  PythonScriptManager.cpp  RecentFilesWidget.cpp  RunButton.cpp  ScriptDocumentView.cpp  (+18 more)
template/: CMakeLists.txt  resources.rc.in
template/include/: TTBResourceExtractor.hpp
template/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
tinacalamine/: CMakeLists.txt  Cargo.toml  build.rs
tinacalamine/include/: CalamineWrapper.hpp
tinacalamine/src/: CalamineWrapper.cpp  lib.rs
xmake/: CMakeLists.txt  xmake.lua
